2008-06-09  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* libmuine/player-gst.c (player_finalize), (bus_message_cb):

	Removed iterate_cb() function that didn't do anything
	but causing thousands of wakeups per second (according
	to powertop). Fixes bug #533238.

2008-02-26  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* src/PlaylistWindow.cs:

	Bug 518828 – Disambiguate Bacon.VolumeButton from
	Gtk.VolumeButton

2008-02-26  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* configure.in:
	
	Bug 518829 – Detect FLAC using pkgconfig file instead of header.

2007-10-22  Peter Johanson  <peter@peterjohanson.com>

	* configure.in: Remove the now-uneeded --enable-gstreamer flag.

2007-10-20  Peter Johanson  <peter@peterjohanson.com>

	* NEWS:
	* configure.in:

	Update for 0.8.8 bug fix release.

2007-10-08  Peter Johanson  <peter@peterjohanson.com>

	* deps/dbus-sharp-glib/*:
	* deps/dbus-sharp/*:

	Update the imports of dbus-sharp and dbus-sharp-glib.

2007-10-08  Peter Johanson  <peter@peterjohanson.com>

	* src/GnomeMMKeys.cs: Import the gnome MM key support from banshee.
	* src/Global.cs: Try the gnome MM key support first, otherwise fall
	back and try the old MM key handling method.
	* src/Makefile.am: Add new file to the file list.

2007-08-09  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* NEWS:

	Updated for upcoming release (work in progress).

2007-08-08  Tamara Roberson  <tamara.roberson@gmail.com>

	* plugins/TrayIcon.cs:
	* DBusLib/Player.cs:
	* src/Metadata.cs:
	* src/AddWindow.cs:
	* src/CoverGetter.cs:
	* src/PluginManager.cs:
	* src/ProgressWindow.cs:
	* src/FileUtils.cs:
	* src/AddAlbumWindow.cs:
	* src/CoverDatabase.cs:
	* src/OverwriteDialog.cs:
	* src/AddSongWindow.cs:
	* src/ErrorDialog.cs:
	* src/About.cs:
	* src/StringUtils.cs:
	* src/PlaylistWindow.cs:
	* src/AddWindowEntry.cs:
	* src/Makefile.am:

	Ran Gendarme against Muine with default rules.  Mostly this
	was simply String.Empty and Environment.NewLine recommendations,